--- a/pom.xml
+++ b/pom.xml
@@ -39,13 +39,46 @@
 		<additionalparam>-Xdoclint:none</additionalparam>
 	</properties>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.gavaghan</groupId>
+				<artifactId>devtest-maven-plugin</artifactId>
+				<version>0.3.0</version>
+				<configuration>
+					<devtest-home>${devtest.home}</devtest-home>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>copy-to-hotDeploy</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
 		<!-- Depends on the DevTest MOAJ -->
 		<dependency>
 			<groupId>com.ca</groupId>
 			<artifactId>devtest</artifactId>
-			<version>9.5.1</version>
+			<version>10.5</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.4</version>
+				<configuration>
+					<show>protected</show>
+				</configuration>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
