Converting over to AutoStep

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
 			<version>10.5</version>
 			<scope>compile</scope>
 		</dependency>
+      
+        <dependency>
+            <groupId>org.gavaghan</groupId>
+            <artifactId>devtest-general-ext</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 	</dependencies>
 
 	<reporting>
